--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-environ==0.8.1
 gunicorn==20.1.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
+Pillow==9.0.1
 platformdirs==2.5.0
 psycopg2-binary==2.9.3
 pytz==2021.3
